k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mediadl
  labels:
    app.kubernetes.io/name: mediadl
    environment: production
