k8s/base/kafka.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: mediadl
  labels:
    app: kafka
spec:
  serviceName: kafka-service
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: apache/kafka:3.7.1
          ports:
            - containerPort: 9092
              name: client
            - containerPort: 9093
              name: controller
          volumeMounts:
            - name: kafka-data
              mountPath: /var/lib/kafka/data
          resources:
            requests: { memory: 512Mi, cpu: 200m }
            limits:   { memory: 2Gi,   cpu: 1000m }
          readinessProbe:
            exec:
              command: ["/opt/kafka/bin/kafka-topics.sh", "--bootstrap-server", "localhost:9092", "--list"]
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 5
      volumes:
        - name: kafka-data
          persistentVolumeClaim:
            claimName: kafka-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: mediadl
spec:
  clusterIP: None
  selector:
    app: kafka
  ports:
    - name: client
      port: 9092
      targetPort: 9092
    - name: controller
      port: 9093
      targetPort: 9093
