k8s/base/redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: mediadl
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
          args:
            - redis-server
            - --maxmemory 512mb
            - --maxmemory-policy noeviction
            - --save 60 1000
            - --loglevel warning
            - --tcp-keepalive 60
          volumeMounts:
            - name: redis-data
              mountPath: /data
          resources:
            requests: { memory: 64Mi,  cpu: 50m  }
            limits:   { memory: 512Mi, cpu: 250m }
          livenessProbe:
            exec:
              command: ["redis-cli", "ping"]
            periodSeconds: 10
          readinessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: mediadl
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
